syntax = "proto3";

package flint;

option go_package = "flint/proto;proto";

service WorkerService {
  rpc ExecuteTask(TaskRequest) returns (TaskResult);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

message TaskRequest {
  string task_id = 1;
  string dag_id = 2;
  string payload = 3; // Task-specific data (e.g., JSON)
}

message TaskResult {
  string task_id = 1;
  string dag_id = 2;
  string status = 3; // success/failure
  string result_data = 4;
}

message HeartbeatRequest {
  string worker_id = 1;
  int32 capacity = 2; // available slots
}

message HeartbeatResponse {
  bool alive = 1;
}
